# ape_dts_consumer_demo

./: .gitignore  README.md  avro_schema.py  config.ini  config_util.py  docker_build.sh  dockerfile  entrypoint.sh  http_consumer_demo_1.py  http_consumer_demo_2.py  index.py  kafka_consumer_demo.py  log.py  requirements.txt
elasticsearch_demo/: function.py
function/: config.ini  function.py
golang_demo/: README.md  go.mod  go.sum  http_consumer_demo.go  kafka_consumer_demo.go  main.go
golang_demo/metadata/: avro_converter.go  avro_converter_schema.go  avro_converter_test.go  avro_schema.go
python_demo/: README.md  avro_schema.py  function.py  http_consumer_demo_1.py  http_consumer_demo_2.py  kafka_consumer_demo.py  log.py  requirements.txt
python_demo/elasticsearch_demo/: function.py
python_demo/function/: function.py
python_demo/redis_demo/: function.py
rust_demo/: Cargo.toml  README.md
rust_demo/src/: http_consumer_demo.rs  kafka_consumer_demo.rs  main.rs
rust_demo/src/metadata/: avro_converter.rs  avro_schema.rs  mod.rs
update_mysql_demo/: function.py
