[package]
name = "rust_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
apache-avro = "0.17.0"
anyhow = {version = "1.0.83", features = ["backtrace"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.87"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
rdkafka = { version = "0.37" }
